First Push -templates and basic controllers

--- a/templates/user-profile.html.twig
+++ b/templates/user-profile.html.twig
@@ -474,7 +474,7 @@
                                 </div>
                                 <div class="widget widget-portfolio">
                                     <div class="wd-heady">
-                                        <h3>Portfolio</h3>
+                                        <h3>Trends</h3>
                                         <img src="assets/images/photo-icon.png" alt="">
                                     </div>
                                     <div class="pf-gallery">
