--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,11 @@
-
-
 body {
   font-family: 'Arial', sans-serif;
-  background-color: #8f8f8f;
+  background-color: #c9c9c9;
   color: #333;
 }
 
 .container {
-  background-color: #fff;
+  background-color: #d9d9d9;
   padding: 30px;
   border-radius: 5px;
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
@@ -16,7 +14,8 @@ body {
 .social-links a {
   margin: 0 10px;
 }
-.previewskriza{
+
+.previewskriza {
   height: 300px;
   width: auto;
 }
@@ -31,8 +30,9 @@ body {
   z-index: 1;
 }
 
-.skrsocial{
-  margin-top: 35px; !important;}
+.skrsocial {
+  margin-top: 35px;
+}
 
 #prevBtn {
   left: 10px;
@@ -45,6 +45,7 @@ body {
 .previewskriza:hover {
   cursor: pointer;
 }
+
 #fullscreenOverlay img {
   max-height: 80vh;
   cursor: pointer;
@@ -54,6 +55,7 @@ body {
   max-width: 80%;
   margin: 0 auto;
 }
+
 #fullscreenOverlay {
   display: flex;
   justify-content: center;
@@ -63,10 +65,12 @@ body {
   height: 100%;
   width: 100%;
 }
-.skrizalogo{
+
+.skrizalogo {
   height: 70px;
   width: auto;
 }
+
 .dot {
   height: 15px;
   width: 15px;
@@ -80,17 +84,6 @@ body {
 
 .dot.active {
   background-color: #e7e7e7;
-}
-body {
-  font-family: 'Arial', sans-serif;
-  background-color: #c9c9c9;
-}
-
-.container {
-  background-color: #d9d9d9;
-  padding: 30px;
-  border-radius: 5px;
-  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
 }
 
 .btn-dark, .btn-primary, .btn-discord {
@@ -115,12 +108,10 @@ body {
 }
 
 footer {
-  position: absolute;
-  bottom: 10px;
+  position: relative;
   width: 100%;
   text-align: center;
 }
-
 
 .theme-container {
   width: 180px;
@@ -130,10 +121,10 @@ footer {
   display: flex;
   align-items: center;
   justify-content: space-around;
+  margin: auto;
 }
 
-.light-btn,
-.dark-btn {
+.light-btn, .dark-btn {
   cursor: pointer;
 }
 
@@ -158,4 +149,15 @@ footer {
   font-family: sans-serif;
   font-size: 14px;
   margin-top: 3rem;
+}
+
+/* Für die mobile Ansicht */
+@media (max-width: 768px) {
+  footer {
+    padding: 10px 0;
+  }
+
+  .container {
+    padding: 20px;
+  }
 }
