--- a/css/main.css
+++ b/css/main.css
@@ -6,13 +6,31 @@ body {
 }
 
 body.light-mode {
-  background-color: #c9c9c9;
-  color: #000; /* Schwarz */
+  background-color: #f7f7f7; /* Ein weiches Weiß */
+  color: #333; /* Ein weiches Schwarz */
 }
 
-body.light-mode .main-content {
-  color: #000; /* Schwarz */
+body.light-mode .navbar {
+  background-color: #fff; /* Reines Weiß */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05); /* Ein leichter Schatten, um die Navbar vom Hauptinhalt abzuheben */
 }
+
+body.light-mode a {
+  color: #007BFF; /* Ein typisches Link-Blau */
+}
+
+body.light-mode a:hover {
+  color: #0056b3; /* Ein dunkleres Blau für den Hover-Effekt */
+}
+
+body.light-mode .navbar-dark .navbar-toggler-icon {
+  background-color: rgba(0,0,0,.5);
+}
+
+body.light-mode .theme-switcher:hover {
+  color: #007BFF; /* Ein typisches Link-Blau für den Hover-Effekt */
+}
+
 body.dark-mode {
   background-color: #333;
   color: white;
@@ -26,7 +44,6 @@ body.dark-mode .navbar-brand,
 body.dark-mode .navbar-nav .nav-link {
   color: white;
 }
-
 body.dark-mode .navbar-toggler-icon {
   background-color: rgba(255,255,255,.5);
 }
@@ -34,20 +51,21 @@ body.dark-mode .navbar-toggler-icon {
 body.dark-mode .theme-switcher:hover {
   color: white;
 }
+body.dark-mode .navbar {
+  background-color: #282828; /* oder eine andere gewünschte dunkle Farbe, die etwas anders als #333 ist */
+}
 
 /* Die Textfarbe der Social-Media-Buttons bleibt im Light-Mode und im Dark-Mode weiß */
 .btn-dark, .btn-primary, .btn-discord {
   color: #fff !important;
 }
+.navbar {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
 
 h1 {
   font-family: 'Dancing Script', cursive;
   font-weight: 700; /* Für eine etwas dickere Schrift */
-}
-
-/* Textfarbe für Links im Light-Modus */
-body.light-mode a {
-  color: #000; /* Schwarz */
 }
 
 
@@ -68,7 +86,7 @@ body.light-mode .main-content {
 }
 
 .container {
-  background-color: #d9d9d9;
+  background-color: #fff;
   padding: 30px;
   border-radius: 5px;
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
@@ -133,7 +151,10 @@ body.light-mode .main-content {
   height: 70px;
   width: auto;
 }
-
+.skrizalogonav {
+  height: 40px;
+  width: auto;
+}
 .dot {
   height: 15px;
   width: 15px;
@@ -143,6 +164,13 @@ body.light-mode .main-content {
   display: inline-block;
   transition: background-color 0.3s ease;
   cursor: pointer;
+}
+/* Menüpunkte im Light-Mode schwarz halten */
+body:not(.dark-mode) .navbar-light .navbar-nav .nav-link {
+  color: black !important;
+}
+body:not(.dark-mode) .navbar-light .navbar-brand {
+  color: black !important;
 }
 
 .dot.active {
