--- a/css/main.css
+++ b/css/main.css
@@ -314,3 +314,13 @@ footer {
     margin-bottom: 5px; /* Abstand zum nächsten Button hinzufügen */
   }
 }
+@keyframes vibrate {
+  0% { transform: translateX(0); }
+  25% { transform: translateX(-2px); }
+  50% { transform: translateX(2px); }
+  75% { transform: translateX(-2px); }
+  100% { transform: translateX(2px); }
+}
+.navbar-toggler:not(.collapsed) {
+  animation: vibrate 0.2s infinite;
+}
